<resources>
    <string name="app_name" translatable="false">EletricCarApp</string>
    <string name="titulo_main">Carro Elétrico</string>
    <string name="carros">CARROS</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="cavalos_potencia">" cv"</string>
    <string name="preco_kwh">Preço kWh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">CALCULAR</string>
    <string name="titulo_calcular_autonomia">Calcular Autonomia</string>
</resources>