<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.CalcularAutonomiaActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_close"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calcular_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_marginVertical="16dp"
        android:text="@string/titulo_calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/preco_kwh"
        android:layout_marginVertical="16dp"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/tv_calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_preco_kwh"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>