<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_eletric_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintTop_toBottomOf="@id/iv_eletric_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/preco"
                app:layout_constraintTop_toBottomOf="@id/tv_nome"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                style="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintTop_toTopOf="@id/tv_preco"
                app:layout_constraintStart_toEndOf="@id/tv_preco" />


            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/bateria"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                app:layout_constraintStart_toStartOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="@id/tv_preco_value" />


            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/potencia"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria"
                app:layout_constraintStart_toStartOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="@id/tv_preco_value" />

            <TextView
                android:id="@+id/tv_potencia_medida"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_height="wrap_content"
                android:text="@string/cavalos_potencia"
                app:layout_constraintTop_toTopOf="@id/tv_potencia"
                app:layout_constraintStart_toEndOf="@id/tv_potencia_value" />


            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia"
                app:layout_constraintStart_toStartOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_recarga"
                app:layout_constraintStart_toStartOf="@id/tv_preco_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>